0028946: Exception on Undo.

//Added additional command ForgetAtt and test case E1 to test issue 28946.